feat: add subscribe section

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdn.tailwindcss.com/"></script>
+    <script src="https://cdn.tailwindcss.com?plugins=forms"></script>
     <script>
       tailwind.config = {
         theme: {
@@ -180,10 +180,33 @@
               <h3 class="text-lg font-semibold mb-1">Extentions</h3>
             </header>
             <p class="text-gray-600 t-1">
-              Expand your capabilities with powerful extensions tailored to enhance your coding experience.
+              Expand your capabilities with powerful extensions tailored to enhance your coding
+              experience.
             </p>
           </article>
         </a>
+      </div>
+    </section>
+    <section class="flex flex-col gap-y-8 py-16">
+      <div class="container max-w-screen-sm">
+        <h2 class="text-4xl font-bold text-center">Stay Updated</h2>
+        <p class="mt-2 text-center text-lg text-gray-600">
+          Subscribe to our newsletter for the latest updates and tips.
+        </p>
+      </div>
+      <div class="container">
+        <form class="flex justify-center gap-x-2">
+          <input
+            type="email"
+            placeholder="Your Email"
+            class="rounded-lg border border-gray-300 px-4 py-2 shadow-sm focus:border-indigo-600 focus:ring-1 w-96"
+          />
+          <button
+            class="px-6 py-2 font-semibold rounded-lg bg-indigo-600 text-indigo-50 hover:bg-indigo-700"
+          >
+            Subscribe
+          </button>
+        </form>
       </div>
     </section>
   </main>
