feat: add footer

--- a/index.html
+++ b/index.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com?plugins=forms"></script>
+    <title>Code Editor</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <script>
       tailwind.config = {
         theme: {
+          fontFamily: {
+            sans: 'Open Sans',
+          },
           container: {
             center: true,
             padding: '2rem',
@@ -210,4 +220,66 @@
       </div>
     </section>
   </main>
+  <footer class="bg-indigo-900 pt-10 pb-8">
+    <div class="container flex flex-col gap-y-8">
+      <div class="flex">
+        <div class="mr-auto max-w-80">
+          <a href="#" class="flex items-center gap-x-2">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+              fill="currentColor"
+              class="size-12 -rotate-6 text-white"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M3 6a3 3 0 0 1 3-3h12a3 3 0 0 1 3 3v12a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3V6Zm14.25 6a.75.75 0 0 1-.22.53l-2.25 2.25a.75.75 0 1 1-1.06-1.06L15.44 12l-1.72-1.72a.75.75 0 1 1 1.06-1.06l2.25 2.25c.141.14.22.331.22.53Zm-10.28-.53a.75.75 0 0 0 0 1.06l2.25 2.25a.75.75 0 1 0 1.06-1.06L8.56 12l1.72-1.72a.75.75 0 1 0-1.06-1.06l-2.25 2.25Z"
+                clip-rule="evenodd"
+              />
+            </svg>
+
+            <span class="text-2xl font-black text-white">Code Editor</span>
+          </a>
+          <p class="mt-4 text-indigo-200">
+            Unlock youe coding potential with tailored settings, shortcuts, and expert tutorials.
+          </p>
+        </div>
+        <div class="flex gap-x-16">
+          <div class="flex flex-col gap-y-4">
+            <h3 class="text-lg font-semibold text-sm uppercase tracking-wider text-white">
+              Popular playlists
+            </h3>
+            <ul class="flex flex-col gap-y-2">
+              <li><a href="#" class="text-indigo-200 hover:text-white">Prettier</a></li>
+              <li><a href="#" class="text-indigo-200 hover:text-white">GitLens</a></li>
+              <li><a href="#" class="text-indigo-200 hover:text-white">Live Share</a></li>
+            </ul>
+          </div>
+          <div class="flex flex-col gap-y-4">
+            <h3 class="text-lg font-semibold text-sm uppercase tracking-wider text-white">
+              Configurations
+            </h3>
+            <ul class="flex flex-col gap-y-2">
+              <li><a href="#" class="text-indigo-200 hover:text-white">Settings</a></li>
+              <li><a href="#" class="text-indigo-200 hover:text-white">Keyboard Shortcuts</a></li>
+              <li><a href="#" class="text-indigo-200 hover:text-white">Code Snippets</a></li>
+            </ul>
+          </div>
+          <div class="flex flex-col gap-y-4">
+            <h3 class="text-lg font-semibold text-sm uppercase tracking-wider text-white">
+              Social
+            </h3>
+            <ul class="flex flex-col gap-y-2">
+              <li><a href="#" class="text-indigo-200 hover:text-white">YouTube</a></li>
+              <li><a href="#" class="text-indigo-200 hover:text-white">Telegram</a></li>
+              <li><a href="#" class="text-indigo-200 hover:text-white">GitHub</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="border-t border-indigo-800 pt-8 text-center text-sm text-indigo-200">
+        &copy; 2025 Code Editor. All rights reserved.
+      </div>
+    </div>
+  </footer>
 </html>
