feat: fix footer

--- a/index.html
+++ b/index.html
@@ -277,9 +277,9 @@
           </div>
         </div>
       </div>
-      <div class="border-t border-indigo-800 pt-8 text-center text-sm text-indigo-200">
+      <!-- <div class="border-t border-indigo-800 pt-8 text-center text-sm text-indigo-200">
         &copy; 2025 Code Editor. All rights reserved.
-      </div>
+      </div> -->
     </div>
   </footer>
 </html>
